--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	
+	<header class='Header'>
+		<div class='header1'>
+		<img src="./Vector.png" alt="">
+		<img src="./Vector (1).png" alt="">
+		</div>
+		<div class='header2'>
+			<img class='map' src="./map-pin.png" alt="">
+			<p class='Pmoskva'>МОСКВА</p>
+		</div>
+		<p class='Pmoskva'>О НАС</p>
+		<p class='Pmoskva'>УСЛУГИ</p>
+		<p class='Pmoskva'>КАТАЛОГ ТАВАРОВ
+</p>
+<p class='Pmoskva'>НАШИ РАБОТЫ</p>
+<p class='Pmoskva'>ВАКАНСИИ</p>
+<p class='Pmoskva'>НОВОСТИ</p>
+<p class='Pmoskva'>КОНТАКТЫ</p>
+<img class='menu' src="./menu.png" alt="">
+
+
+	</header>
 </body>
 </html>
