create main and SectionFirst

--- a/index.html
+++ b/index.html
@@ -28,5 +28,27 @@
 
 
 	</header>
+	
+	<main>
+<section class='SectionFirst'>
+	<div class='textbot'>
+	<div class='sectionChild'>
+<div class='borderground'>
+	<p class='pАкция'>акция</p>
+</div>
+<div class='borderground2'>
+	<p class='pАкция'>10 октября - 28 октября</p>
+	
+</div>
+
+</div>
+<p class='pUteplenie'>Утепление лоджии</p>
+<button class='butЗаказать'>Заказать</button>
+</div>
+<div class='Pskidka'>Скидка 15% для новых клиентов при заказе услуги Утепление лоджии  </div>
+<button class='butЗаказатьm'>Заказать</button>
+</section>
+
+	</main>
 </body>
 </html>
