--- a/index.html
+++ b/index.html
@@ -48,7 +48,35 @@
 <div class='Pskidka'>Скидка 15% для новых клиентов при заказе услуги Утепление лоджии  </div>
 <button class='butЗаказатьm'>Заказать</button>
 </section>
-
+<section class='SectionSecond'>
+	<p class='pUslugi'>Услуги и товары для вашего дома</p>
+	<div class='RowBox'>
+		<div class='Rowgap'>
+			<p class='pRemont'>ремонт</p>
+			<p class='pKomleks'>Комплекс мероприятий по восстановлению работоспособного какого-либо объекта </p>
+		</div>
+		<div class='Rowgap'>
+			<p class='pRemont'>Клининг</p>
+			<p class='pKomleks'>Комплекс мероприятий по восстановлению работоспособного какого-либо объекта </p>
+		</div>
+		<div class='Rowgap'>
+			<p class='pRemont'>пвх-изделия</p>
+			<p class='pKomleks'>Комплекс мероприятий по восстановлению работоспособного какого-либо объекта </p>
+		</div>
+	</div>
+	<div class='Restengle'>
+		<div>
+			<img class='res' src="./Rectangle 5.png" alt="">
+		</div>
+		<div class='DomaFlex'>
+			<div class='textbott'>
+			<p class='pDoma'>услуги для дома</p>
+			<p class='pOdnoznachno'>Однозначно, интерактивные прототипы, инициированные исключительно синтетически, описаны максимально подробно. Значимость этих проблем настолько очевидна, что перспективное планирование является качественно новой ступенью первоочередных требований.</p>
+			<button class='butЗаказатьt'>Все услуги</button>
+			</div>
+		</div>
+	</div>
+</section>
 	</main>
 </body>
 </html>
