--- a/index.html
+++ b/index.html
@@ -77,6 +77,75 @@
 		</div>
 	</div>
 </section>
+<section class='SectionThird'>
+	<p class='pуслуги'>УСЛУГИ</p>
+	<div class='divBlock'>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Аутсорсинг</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1.png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Клининг</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (1).png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Текущий ремонт</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (2).png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Капитальный ремонт</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (3).png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>ПВХ-изделия</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (4).png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Натяжные потолки</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (5).png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Индивидуальный пошив</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (6).png" alt="">
+</div>
+		</div>
+		<div class='Imgtext'>
+			
+				<p class='outblock'>Услуги погрузчика</p>
+			
+			<div>
+<img class='pixel' src="./pexels-anna-shvets-3987142 1 (7).png" alt="">
+</div>
+		</div>
+	</div>
+</section>
 	</main>
 </body>
 </html>
