--- a/index.html
+++ b/index.html
@@ -180,6 +180,39 @@
 </div>
 </div>
 </section>
+<section class='SectionFifth'>
+	<div class='sectionTop'>
+	<p class='pNews'>НОВОСТИ КОМПАНИИ</p>
+	<div class='FlexKomp'>
+		<div class='Divdevice'>
+			<div>
+			<img class='src' src="./Rectangle 53 (1).png" alt="">
+			</div>
+			<p class='p18'>18.10.2023
+Новость</p>
+<p class='pPrototip'>Высококачественный прототип будущего проекта </p>
+		</div>
+		<div class='Divdevice'>
+			<div>
+			<img class='src' src="./Rectangle 53 (2).png" alt="">
+			</div>
+			<p class='p18'>18.10.2023
+Новость</p>
+<p class='pPrototip'>Высококачественный прототип будущего проекта </p>
+		</div>
+		<div class='Divdevice'>
+			<div>
+			<img class='src' src="./Rectangle 53 (3).png" alt="">
+			</div>
+			<p class='p18'>18.10.2023
+Новость</p>
+<p class='pPrototip'>Высококачественный прототип будущего проекта </p>
+		</div>
+	</div>
+	</div>
+	<button class='butЗаказ'>Смотреть еще</button>
+</section>
+
 	</main>
 </body>
 </html>
