--- a/index.html
+++ b/index.html
@@ -214,5 +214,52 @@
 </section>
 
 	</main>
+
+	<footer class='Footer'>
+		<div class='FlexFooter'>
+<div>
+	<img class='Logo' src="./Logo.png" alt="">
+</div>
+<div class='FonWeight'>
+	<div class='Onas'>
+		<p class='pOnas'>О нас</p>
+		<p class='pOnas'>Услуги</p>
+		<p class='pOnas'>Каталог товаров
+</p>
+<p class='pOnas'>Наши работы</p>
+<p class='pOnas'>вакансии</p>
+<p class='pOnas'>новости</p>
+<p class='pOnas'>Контакты</p>
+	</div>
+	<div class='InstFlex'>
+<div>
+	<p class='pkaluga'>г. Калуга
+ул. Московская, д 311, корпус 3
++7 (995) 222-93-90
+vasdom40@yandex.ru</p>
+</div>
+<div>
+	<p class='pInst'>
+Instagram
+Facebook
+ВКонтакте
+</p>
+</div>
+	</div>
+</div>
+
+		</div>
+		<hr class='hr1'>
+		<div class='DivEnd'>
+			<div class='PravaFlex'>
+				<p class='pprava'>Правовая информация</p>
+				<p class='pprava'>Политика конфиденциальности и обработки персональных данных</p>
+			</div>
+			<div class='Flex2023'>
+				<p class='pprava'>© 2023</p>
+				<img src="./Vector (2).png" alt="">
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
